--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "aos": "^2.3.4",
         "countup.js": "^2.9.0",
         "swiper": "^11.2.10",
-        "tsparticles": "^3.8.1",
-        "tsparticles-engine": "^2.12.0",
+        "@tsparticles/engine": "^3.8.1",
+        "@tsparticles/basic": "^3.8.1",
         "vanilla-counter": "^1.0.3"
     }
 }
